# research

./: .gitignore
celiac/: .gitignore  check_data_availability.py  pyproject.toml  requirements.txt  setup.sh
celiac/celiac/: __init__.py  ablations.py  build_kg.py  config.py  data_fetcher.py  datasets.py  features.py  main.py  models.py  models_inductive.py  train.py  visualize.py
celiac/celiac/baselines/: __init__.py  gnn_baselines.py  kge_models.py  node2vec_baseline.py  trainer.py
celiac/celiac/data/: __init__.py
celiac/celiac/data/primekg/: __init__.py  downloader.py  pyg_converter.py  (+1 more)
celiac/celiac/evaluation/: __init__.py  experiment_runner.py  metrics.py  splits.py  statistical_tests.py
celiac/celiac/interpretability/: __init__.py  attention_viz.py  case_studies.py  path_analysis.py
celiac/celiac/utils/: __init__.py  gcs_storage.py
celiac/data/primekg/: celiac_heterodata.pt  node_mappings.pkl
celiac/data/processed/: gene_phenotype_edges.csv  metabolite_gene_edges.csv  microbe_metabolite_edges.csv
celiac/docs/: IMPLEMENTATION_PLAN.md  abstract.md
celiac/docs/chil/: main.tex
celiac/docs/iclr/: main.tex
celiac/docs/jei/: main.tex
celiac/docs/neurips/: main.tex
celiac/models/: ablation_results.json  ablation_results_full.json  gene_phenotype_history.json  gene_phenotype_model.pt  multi_seed_results.json  primekg_all_baselines.json  primekg_heterognn_results.json
celiac/notebooks/: celiac_gut_brain_gnn.ipynb
celiac/results/: inductive_primekg.md  inductive_primekg_table.tex
celiac/scripts/: run_inductive_experiment.py
(+256 files in other folders)
